Fixing new lines in data